# Ros_Global_Delay

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/beb/: CheckLearn.h  CheckLearnRequest.h  CheckLearnResponse.h  Complete.h  CompleteRequest.h  CompleteResponse.h  Estimate.h  EstimateRequest.h  EstimateResponse.h  Next_trajectory.h  Next_trajectoryRequest.h  Next_trajectoryResponse.h  Optimized.h  OptimizedRequest.h  OptimizedResponse.h  SendDelayLogic.h  SendDelayLogicRequest.h  SendDelayLogicResponse.h  TrReady.h  TrReadyRequest.h  TrReadyResponse.h  broadReady.h  broadReadyRequest.h  broadReadyResponse.h  land.h  (+8 more)
src/Global_bebop/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/Global_bebop/config/: bebop2.yaml
src/Global_bebop/launch/: bebop.launch  test1.sh
src/Global_bebop/src/: BagOps.py  FrameBoad.py  FrameBroadcast.cpp  GP_filt.py  GPfilt.py  MPC.py  Optimizer.py  PlotOps.py  TrainBag.py  beb.cpp  beb.cpp~  bebop2.yaml  bebop2.yaml~  mpc.msg  path.h  plotter.py  plotter.py~  pub_pose.cpp  publish_pose.py
src/Global_bebop/src/BagFiles/: FlightTest1.bag  FlightTest2.bag  FlightTest3.bag  FlightTest4.bag  FlightTest5.bag  FlightTest6.bag  FlightTest7.bag
src/Global_bebop/src/TestFlights/: TrainingFlight.txt  TrainingFlight2.txt  TrainingFlight3.txt  TrainingFlight4.txt  TrainingFlight5.txt
src/Global_bebop/srv/: CheckLearn.srv  Complete.srv  Estimate.srv  Next_trajectory.srv~  Optimized.srv  Optimized.srv~  SendDelayLogic.srv  TrReady.srv  broadReady.srv  path.srv~  randomDelay.srv
src/pub_pose/: CMakeLists.txt  CMakeLists.txt~
(+252 files in other folders)
